@@ -38,7 +38,7 @@
                 <widget class="QComboBox" row="4" column="1">
                     <item>
                         <property name="text">
-                            <string> &lt;Mixed&gt; </string>
+                            <string>&lt;Mixed&gt;</string>
                         </property>
                     </item>
                     <item>
@@ -66,7 +66,7 @@
                 <widget class="QComboBox" row="2" column="1">
                     <item>
                         <property name="text">
-                            <string> &lt;Mixed&gt; </string>
+                            <string>&lt;Mixed&gt;</string>
                         </property>
                     </item>
                     <item>
@@ -122,7 +122,7 @@
                 <widget class="QComboBox" row="1" column="1">
                     <item>
                         <property name="text">
-                            <string> &lt;Mixed&gt; </string>
+                            <string>&lt;Mixed&gt;</string>
                         </property>
                     </item>
                     <item>
@@ -150,7 +150,7 @@
                 <widget class="QComboBox" row="3" column="1">
                     <item>
                         <property name="text">
-                            <string> &lt;Mixed&gt; </string>
+                            <string>&lt;Mixed&gt;</string>
                         </property>
                     </item>
                     <item>
